# ADVML-das

./: pyproject.toml
notebooks/: causalgym.ipynb  task_design.ipynb
sbatches/: boundless_das.slurm  boundless_das_array.slurm  generate_dataset.sh  generate_dataset.slurm  prealign_multiplication.sh
scripts/: generate_multiplication_dataset.py  multiplication_boundless_das_utils.py  prealign_multiplication.py  prepare_boundless_das_dataset.py  train_boundless_das.py
