[project]
name = "advml_das"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.43",
    "evaluate>=0.4.6",
    "nnsight>=0.5.15",
    "pyvene==0.1.6",
    "torch>=2.0",
    "transformers>=4.40",
    "tqdm>=4.66",
]